--- a/mapa.html
+++ b/mapa.html
@@ -39,8 +39,8 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 
 	
-  <!-- Modernizr -->
-  <script src="js/modernizr.js"></script>
+	<!-- Modernizr -->
+	<script src="js/modernizr.js"></script>
 
 	<link rel="stylesheet" href="css/style.css">
 
@@ -51,62 +51,19 @@
 	<!-- End demo purposes only -->
 
 
-
 	<style type="text/css">
 	#musica {height:0;width:0;}
 	</style>
-
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113083764-1"></script>
 	<script>
-	// Array con todas las imágenes que deseamos que se vayan cambiando a
-	// cada clic
-	var imagenes=Array("images/icons/image1.png","images/icons/image2.png");
-	var imagenVisible=0;
- 
-	// Función que cambia la imagen actual por la siguiente
-	function cambiar(img)
-	{
-		imagenVisible++;
-		if(imagenVisible>=imagenes.length)
-		{
-			imagenVisible=0;
-		}
-		img.src=imagenes[imagenVisible];
-		cargarSiguienteImagen();
-	}
- 
-	/**
-	 * Esta función carga la siguiente imagen para no tener que esperar su carga
-	 * en el momento de mostrarla.
-	 */
-	function cargarSiguienteImagen()
-	{
-		if((imagenVisible+1)<imagenes.length)
-		{
-			console.log(imagenVisible+1);
-			var imgTmp=new Image();
-			imgTmp.src=imagenes[imagenVisible+1];
-		}
-	}
- 
-	window.onload=function() {
-		cargarSiguienteImagen();
-	}
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	  gtag('config', 'UA-113083764-1');
+	</script>
 	
-	
-	
-	
-	function openAudio(word){
-			
-		    var imagen = document.getElementById('imagen').src;
-			var flag = "0";
-			if (imagen.includes('1')){
-				flag = 1;
-			} else {
-				flag = 0;
-			}						
-	}
-		
-</script>
 	
 	<style>
 	img {cursor:pointer;}
@@ -399,19 +356,9 @@ function openSection(texto){
 	</script> 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js">
 	</script>
-	<script type="text/javascript" src="js/slick/slick.min.js"></script>
-	
 
 
-	<script type="text/javascript">
-    $(document).ready(function(){
-      $('.slider').slick({
-      	dots : true,
-      	speed: 1000,
-      	autoplay: true
-      });
-    });
-  </script>
+
 
 
 	<!-- jQuery -->
@@ -443,28 +390,14 @@ function openSection(texto){
 
 
 
-	<script src="js/google_map.js"></script>
+
 
 	<!-- For demo purposes only styleswitcher ( You may delete this anytime ) -->
 	<script src="js/jquery.style.switcher.js"></script>
-	  <script defer src="js/jquery.flexslider.js"></script>
+	  
 
   <script defer src="js/demo.js"></script>
-	<script>
-		$(function(){
-			$('#colour-variations ul').styleSwitcher({
-				defaultThemeId: 'theme-switch',
-				hasPreview: false,
-				cookie: {
-		          	expires: 30,
-		          	isManagingLoad: true
-		      	}
-			});	
-			$('.option-toggle').click(function() {
-				$('#colour-variations').toggleClass('sleep');
-			});
-		}); 
-	</script>
+	
 	<!-- End demo purposes only -->
 
 	<!-- Main JS (Do not remove) -->
@@ -472,29 +405,8 @@ function openSection(texto){
 
   
 
-	<script type="text/javascript">
-    $(function(){
-      SyntaxHighlighter.all();
-    });
-    $(window).load(function(){
-      $('.flexslider').flexslider({
-        animation: "slide",
-        controlsContainer: $(".custom-controls-container"),
-        customDirectionNav: $(".custom-navigation a"),
-        start: function(slider){
-          $('body').removeClass('loading');
-        }
-      });
-    });
-  </script>
-  
-  <script type="text/javascript">
-  	$(document).ready(function() {
-    $('.data').slick();
-	});
-  </script>
-  
-  
+
+
   
 
 
