--- a/radios.html
+++ b/radios.html
@@ -40,8 +40,8 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 
 	
-  <!-- Modernizr -->
-  <script src="js/modernizr.js"></script>
+	<!-- Modernizr -->
+	<script src="js/modernizr.js"></script>
 
 	<link rel="stylesheet" href="css/style.css">
 
@@ -51,16 +51,21 @@
 	<link rel="stylesheet" id="theme-switch" href="css/slick-theme.css">
 	<!-- End demo purposes only -->
 	
-
-
-
 	<style type="text/css">
 	#musica {height:0;width:0;}
 	</style>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113083764-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	  gtag('config', 'UA-113083764-1');
+	</script>
 
 	<script>
-	// Array con todas las imágenes que deseamos que se vayan cambiando a
-	// cada clic
+	// Array con todas las imágenes que deseamos que se vayan cambiando a cada clic
 	var imagenes=Array("images/icons/image1.png","images/icons/image2.png");
 	var imagenVisible=0;
  
@@ -76,10 +81,7 @@
 		cargarSiguienteImagen();
 	}
  
-	/**
-	 * Esta función carga la siguiente imagen para no tener que esperar su carga
-	 * en el momento de mostrarla.
-	 */
+	// Esta función carga la siguiente imagen para no tener que esperar su carga en el momento de mostrarla.
 	function cargarSiguienteImagen()
 	{
 		if((imagenVisible+1)<imagenes.length)
@@ -859,27 +861,9 @@ text-align: center;
 
   
 
-	<script type="text/javascript">
-    $(function(){
-      SyntaxHighlighter.all();
-    });
-    $(window).load(function(){
-      $('.flexslider').flexslider({
-        animation: "slide",
-        controlsContainer: $(".custom-controls-container"),
-        customDirectionNav: $(".custom-navigation a"),
-        start: function(slider){
-          $('body').removeClass('loading');
-        }
-      });
-    });
-  </script>
+	
   
-  <script type="text/javascript">
-  	$(document).ready(function() {
-    $('.data').slick();
-	});
-  </script>
+  
 
 	</body>
 </html>
