--- a/quechua/index.html
+++ b/quechua/index.html
@@ -42,6 +42,8 @@
 	<link rel="stylesheet" href="../css/icomoon.css">
 	<!-- Simple Line Icons -->
 	<link rel="stylesheet" href="../css/simple-line-icons.css">
+	<!-- json -->
+	<script src="../js/contact_quz.js"></script>
 	<!-- Magnific Popup -->
 	<link rel="stylesheet" href="../css/magnific-popup.css">
 	<!-- Bootstrap  -->
@@ -713,10 +715,10 @@
 				</div>
 				<div class="col-md-3 col-sm-6 text-center fh5co-service to-animate"  >
 					 <a href="https://www.qichwa.net/#/" target="_blank">
-					 <img src="images/icons/quechuadic.png" class="icons_bottom">
+					 <img src="../images/icons/quechuadic.png" class="icons_bottom">
 					 </a>
 					<h3  onmouseout="eventos.pause();" onmouseover="openAudio('eventos')">QICHWADIC</h3>
-					<p style="font-size: 18px;">Diccionario multidialectal de Quechua en versión web y móvil</p> 
+					<p style="font-size: 18px;">Computadurapaq chaynallataq celularpaq achka qichwa simikunawan rurasqa simi taqi.</p> 
 				</div>
 			</div>
 
@@ -941,23 +943,23 @@
 				</div>
 							
 								
-				<form class="col-lg-6 to-animate" data-toggle="validator" role="form">
+				<form id="form" class="col-lg-6 to-animate" data-toggle="validator" role="form">
 					<h3>Qamta riqsinaykupaq</h3>
                   <div class="form-group">
                       <label class="sr-only" for="name">Sutiyki</label>
-                      <input class="form-control" data-error="* Campo obligatorio" id="Sutiyki" placeholder="Sutiyki"  type="text" required />
+                      <input class="form-control" data-error="* Kayta huntachiy" id="first_name" placeholder="Sutiyki"  type="text" required />
                       <div class="help-block with-errors"></div>
                   </div>
 
                   <div class="form-group">
                     <label for="email" class="sr-only">Email apachikunayki</label>
-                    <input type="email" class="form-control"  data-error="* Verifique la dirección de email" id="email" placeholder="Email apachikunayki" required>
+                    <input type="email" class="form-control"  data-error="* Apachikuna llikata (email) chaninchay " id="email" placeholder="Email apachikunayki" required>
                     <div class="help-block with-errors"></div>
                   </div>
 
                   <div class="form-group">
                       <label class="sr-only" for="message">Kunakuyniyki, willarikuyniykipas</label>
-                      <textarea class="form-control" data-error="* Campo obligatorio" id="message" placeholder="Kunakuyniyki, willarikuyniykipas" required="" cols="30" rows="5"></textarea>
+                      <textarea class="form-control" data-error="* Kayta huntachiy" id="message" placeholder="Kunakuyniyki, willarikuyniykipas" required="" cols="30" rows="5"></textarea>
                       <div class="help-block with-errors"></div>
                   </div>
 
@@ -1024,11 +1026,26 @@
 		</div>
 	</footer>
 	
+	<script>
+          $("#form").validator().on("submit", function (event) {
+			if (event.isDefaultPrevented()) {
+				// handle the invalid form...
+				console.log("falta llenar");
+			} else {
+				event.preventDefault();
+				send();
+					} 
+			});
+    </script>
+	<!--sweetalert-->
+	<script src="../js/sweetalert2.all.js"></script>
+	<!-- Include a polyfill for ES6 Promises (optional) for IE11, UC Browser and Android browser support -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.js"></script>
+	<link href="https://cdn.jsdelivr.net/sweetalert2/6.5.6/sweetalert2.min.css" rel="stylesheet" type="text/css">
 
-	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js">
-	</script> 
-	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js">
-	</script>
+
+	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js">	</script> 
+	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js">	</script>
 	<script type="text/javascript" src="js/slick/slick.min.js"></script>
 	
 
